--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,16 @@
-baseURL: https://example.org/
+baseURL: https://arejula27.github.io
 languageCode: en-us
 title: Íñigo Aréjula
 theme: ["PaperMod"]
+params:
+  ShowReadingTime: true
+  ShowBreadCrumbs: true
+  homeInfoParams:
+    Title: Hi there! I'm Íñigo Aréjula.
+    Content: Software engineer and FOSS enthusiast. I write about software development, learning and other things.
+
+  socialIcons: # optional
+    - name: "github"
+      url: "https://github.com/arejula27/"
+    - name: "linkedin"
+      url: "linkedin.com/in/íñigo-arejula"
