--- a/hugo.yaml
+++ b/hugo.yaml
@@ -16,6 +16,10 @@ menu:
       name: "Tags"
       url: "/tags/"
       weight: 20
+    - identifier: "Resume"
+      name: "Resume"
+      url: "/CV_inigo_arejula.pdf"
+      weight: 30
 
 params:
   ShowReadingTime: true
