--- a/hugo.yaml
+++ b/hugo.yaml
@@ -33,3 +33,5 @@ params:
       url: "https://github.com/arejula27/"
     - name: "linkedin"
       url: "linkedin.com/in/íñigo-arejula"
+    - name: "email"
+      url: "mailto:arejula27@gmail.com"
