--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: https://arejula27.github.io
 languageCode: en-us
-title: Íñigo Aréjula
+title: Íñigo Aréjula Aísa
 theme: ["PaperMod"]
 enableEmoji: true
 taxonomies:
@@ -27,8 +27,9 @@ params:
   env: production
   ShowCodeCopyButtons: true
   ShowRssButtonInSectionTermList: true
+  ShowShareButtons: true
   homeInfoParams:
-    Title: Hi there! I'm Íñigo Aréjula.
+    Title: Hi there! I'm Íñigo Aréjula Aísa.
     Content: Software engineer and FOSS enthusiast. I write about software development, learning and other things.
 
   socialIcons: # optional
@@ -66,7 +67,7 @@ languages:
           weight: 30
     params:
       homeInfoParams:
-        Title: ¡Hola! Soy Íñigo Aréjula.
+        Title: ¡Hola! Soy Íñigo Aréjula Aísa.
         Content: Ingeniero de software y entusiasta del software libre. Escribo sobre desarrollo de software, aprendizaje y otras cosas.
 outputs:
   home:
