--- a/hugo.yaml
+++ b/hugo.yaml
@@ -18,7 +18,7 @@ menu:
       weight: 20
     - identifier: "Resume"
       name: "Resume"
-      url: "/CV_inigo_arejula.pdf"
+      url: "/cv_inigo_arejula.pdf"
       weight: 30
 
 params:
@@ -63,7 +63,7 @@ languages:
           weight: 20
         - identifier: "CV"
           name: "CV"
-          url: "/CV_inigo_arejula.pdf"
+          url: "../cv_inigo_arejula.pdf"
           weight: 30
     params:
       homeInfoParams:
