fix linkedin link

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -36,7 +36,7 @@ params:
     - name: "github"
       url: "https://github.com/arejula27/"
     - name: "linkedin"
-      url: "linkedin.com/in/íñigo-arejula"
+      url: "https://linkedin.com/in/íñigo-arejula"
     - name: "email"
       url: "mailto:arejula27@gmail.com"
 
