--- a/hugo.yaml
+++ b/hugo.yaml
@@ -27,7 +27,7 @@ params:
   env: production
   ShowCodeCopyButtons: true
   ShowRssButtonInSectionTermList: true
-  ShowShareButtons: true
+  ShowShareButtons: false
   homeInfoParams:
     Title: Hi there! I'm Íñigo Aréjula Aísa.
     Content: Software engineer and FOSS enthusiast. I write about software development, learning and other things.
